Adding items from another HackerRank practice round.

--- a/java/Classes.ipynb
+++ b/java/Classes.ipynb
@@ -2892,7 +2892,9 @@
     "    - hash does not match single object hash for single object (it is an array hash)\n",
     "        - it is backed by `Arrays.hashCode(arr)`\n",
     "- `toString(o)` and `toString(o, default)` are null-safe string conversions\n",
-    "    - first version returns null if o is null"
+    "    - first version returns null if o is null\n",
+    "- `isNull(o)` and `nonNull(o)`\n",
+    "    - very useful for stream predicates"
    ]
   },
   {
