--- a/java/Collections.ipynb
+++ b/java/Collections.ipynb
@@ -1831,7 +1831,10 @@
     "\n",
     "    - Method: `boolean hasNext()`\n",
     "    - Method: `T next()`\n",
-    "- `Collection<T>` is an interface that provides basic collection stuff like size, iterator, etc."
+    "    - other default methods available for convenience too\n",
+    "- `Collection<T>` is an interface that provides basic collection stuff like size, iterator, etc.\n",
+    "    \n",
+    "The way iterators are set up is compatible with __laziness__ for things like streams or custom collections."
    ]
   },
   {
@@ -2386,9 +2389,124 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "6a8b96ae",
+   "metadata": {},
+   "source": [
+    "# Restriction on nulls\n",
+    "\n",
+    "The static convenience methods for constructing immutable collections such as `List.of` explicitly make sure no `null` is passed in and throw if it is.  This is done for philosophical reasons and is not a general limitation of immutable lists, as shown in the example that doesn't throw below.\n",
+    "\n",
+    "`Arrays.asList` accepts null as well, but with the caveat that passing in a single null is ambiguous with passing a null array and will not work."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "420d7cdf",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "EvalException",
+     "evalue": "null",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1m\u001b[31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1m\u001b[31mjava.lang.NullPointerException: null\u001b[0m",
+      "\u001b[1m\u001b[31m\tat java.base/java.util.Objects.requireNonNull(Objects.java:233)\u001b[0m",
+      "\u001b[1m\u001b[31m\tat java.base/java.util.Arrays$ArrayList.<init>(Arrays.java:4137)\u001b[0m",
+      "\u001b[1m\u001b[31m\tat java.base/java.util.Arrays.asList(Arrays.java:4122)\u001b[0m",
+      "\u001b[1m\u001b[31m\tat NullDemo.main(#14:1)\u001b[0m",
+      "\u001b[1m\u001b[31m\tat .(#27:1)\u001b[0m"
+     ]
+    }
+   ],
+   "source": [
+    "import java.util.List;\n",
+    "import java.util.ArrayList;\n",
+    "import java.util.Collections;\n",
+    "import java.util.Arrays;\n",
+    "\n",
+    "class NullDemo {\n",
+    "    public static void main(String[] args) {\n",
+    "      List<Integer> o = new ArrayList<>();\n",
+    "      o.add(null); // OK\n",
+    "      List<Integer> o2 = Collections.unmodifiableList(o); // OK\n",
+    "      \n",
+    "      List<Integer> o3 = Arrays.asList(1, 2, null); // OK\n",
+    "      // List<Integer> o4 = Arrays.asList(null); // BAD because of ambiguity\n",
+    "      \n",
+    "      System.out.println(\"Still alive!\");\n",
+    "      List<Integer> l = List.of(1, 2, null); // THROWS\n",
+    "    }\n",
+    "}\n",
+    "NullDemo.main(null);"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b5653cef",
+   "metadata": {},
+   "source": [
+    "# Empty Constants\n",
+    "\n",
+    "`Collections.EMPTY_LIST`, `Collections.EMPTY_SET`, `Collections.EMPTY_MAP` are __immutable__ empty collections as public static final constants of the `Collections` class."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "2c2a4a0c",
+   "metadata": {},
+   "source": [
+    "# Hashes\n",
+    "\n",
+    "The implementations for hasing are lower-level than the collections themselves and depend only on the items, not on the state of the collection.\n",
+    "\n",
+    "In this example, both the mutable and immutable collections have the same hash because they have the same items.\n",
+    "\n",
+    "This makes collections suitable, out of the box, for use in other collections.\n",
+    "\n",
+    "eg. You can use a `List<>` as a tuple and stuff like that."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "0e4cca37",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1766\n",
+      "1766\n"
+     ]
+    }
+   ],
+   "source": [
+    "import java.util.List;\n",
+    "import java.util.ArrayList;\n",
+    "\n",
+    "class HashDemo {\n",
+    "    public static void main(String[] args) {\n",
+    "        List<Integer> l1 = new ArrayList<>();\n",
+    "        l1.add(25);\n",
+    "        l1.add(30);\n",
+    "        \n",
+    "        List<Integer> l2 = List.of(25, 30);\n",
+    "        \n",
+    "        System.out.println(l1.hashCode());\n",
+    "        System.out.println(l2.hashCode());\n",
+    "    }\n",
+    "}\n",
+    "HashDemo.main(null);"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5ff125b9",
+   "id": "c61ee822",
    "metadata": {},
    "outputs": [],
    "source": []
