--- a/java/Functional Programming.ipynb
+++ b/java/Functional Programming.ipynb
@@ -829,12 +829,12 @@
     "\n",
     "It __will not return another stream__.\n",
     "\n",
-    "It is not the same as _tap_ in observables - just print within a map if you need that."
+    "It is not the same as _tap_ in observables - you can use `peek` for that."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 37,
    "id": "1ec7d12d",
    "metadata": {},
    "outputs": [
@@ -842,16 +842,28 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1 2 3 4 5 \n"
+      "1 2 3 4 5 \n",
+      "\n",
+      "1\n",
+      "2\n",
+      "3\n",
+      "4\n",
+      "5\n"
      ]
     }
    ],
    "source": [
+    "import java.util.List;\n",
+    "\n",
     "public class ForEachDemo {\n",
     "    public static void main(String[] args) {\n",
     "        List.of(1, 2, 3, 4, 5).stream().forEach(\n",
     "            n -> System.out.print(n.toString() + \" \"));\n",
     "        System.out.println();\n",
+    "        System.out.println();\n",
+    "        \n",
+    "        // method reference for clarity\n",
+    "        List.of(1, 2, 3, 4, 5).stream().forEach(System.out::println);\n",
     "    }\n",
     "}\n",
     "ForEachDemo.main(null);"
@@ -910,7 +922,11 @@
    "source": [
     "## Method References\n",
     "\n",
-    "Make sure to use them when you can!"
+    "Make sure to use them when you can!\n",
+    "\n",
+    "eg. `Objects::nonNull` for predicates\n",
+    "\n",
+    "eg. `System.out::println` for `peek()` and `forEach()`"
    ]
   },
   {
@@ -1041,6 +1057,7 @@
     "Instance Members:\n",
     "  - `allMatch(predicate)` and `anyMatch(predicate)` and `noneMatch(predicate)`\n",
     "  - `count()` to count elements\n",
+    "      - note that it's a `long` which is different from collections, implying you can break the 2 GB limit\n",
     "  - `distinct()` to deduplicate based on `Object.equals()`\n",
     "  - `flatMap(mapFn)` is like map but each element becomes a stream and then they all get concatted lazily\n",
     "  - `flatMapTo*` is like flatMap but getting IntStream, LongStream, or DoubleStream\n",
@@ -1409,6 +1426,322 @@
   },
   {
    "cell_type": "markdown",
+   "id": "553e3759",
+   "metadata": {},
+   "source": [
+    "## Newer Stream Methods\n",
+    "\n",
+    "The default search results give you Java 8.  If you add \"17\" to a search string you can get linked to the Java 17 documents.  The following methods were added to streams after 8 (some as soon as 9).\n",
+    "\n",
+    "- `dropWhile(predicate)`\n",
+    "    - skips elements as long as predicate keeps matching\n",
+    "    - for ordered stream only\n",
+    "- `takeWhile(predicate)`\n",
+    "    - takes elements as long as predicate keeps matching\n",
+    "    - for ordered stream only\n",
+    "- `ofNullable(e)`\n",
+    "    - similar to Optional.stream()\n",
+    "    - 1 element if non-null, otherwise 0\n",
+    "- `mapMulti*`\n",
+    "    - methods for mapping multiple elements onto each element\n",
+    "- `iterate(seed, predicate, operator)`\n",
+    "    - new overload of iterate() to allow for stopping when a condition stops being met (non-infinite)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e506290e",
+   "metadata": {},
+   "source": [
+    "## Iterator\n",
+    "\n",
+    "Streams __do not implement `Iterable`__, so they cannot be used in enhanced for loops, but they do have an `iterator()` member which is a __terminal operation__ invalidating the stream and getting a __lazy iterator__ in its place.\n",
+    "\n",
+    "This is useful if you need to do some operation that isn't (yet?) supported on streams in Java."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "4e89611f",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n",
+      "2\n",
+      "3\n"
+     ]
+    }
+   ],
+   "source": [
+    "import java.util.stream.Stream;\n",
+    "import java.util.Iterator;\n",
+    "\n",
+    "class IteratorDemo {\n",
+    "    public static void main(String[] args) {\n",
+    "        Stream<Integer> s = Stream.of(1, 2, 3);\n",
+    "        Iterator<Integer> iter = s.iterator();\n",
+    "        \n",
+    "        while (iter.hasNext()) {\n",
+    "            System.out.println(iter.next());\n",
+    "        }\n",
+    "    }\n",
+    "}\n",
+    "IteratorDemo.main(null);"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ef50203d",
+   "metadata": {},
+   "source": [
+    "### Zip\n",
+    "\n",
+    "This useful functional programming method is not (yet?) available in Java, but you can do it yourself as follows. Knowing this pattern also helps clarify some other things about the API.\n",
+    "\n",
+    "Notes:\n",
+    "- both the input streams are closed by calling zip()\n",
+    "- both streams can be infinite (lazy)\n",
+    "- I had to use -1 because List.of() doesn't allow null\n",
+    "    - you could use null if you use multiple lines in the lambda with ArrayList<>\n",
+    "    - if the input streams could have null, you need to think of another solution"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "23304854",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1, 100]\n",
+      "[2, 200]\n",
+      "[3, 300]\n"
+     ]
+    }
+   ],
+   "source": [
+    "import java.util.stream.Stream;\n",
+    "\n",
+    "class ZipDemo {\n",
+    "    public static Stream<List<Integer>> zip(Stream<Integer> left, Stream<Integer> right) {\n",
+    "        var iter1 = left.iterator();\n",
+    "        var iter2 = right.iterator();\n",
+    "        \n",
+    "        return Stream.generate(() -> List.of(iter1.hasNext() ? iter1.next() : -1, \n",
+    "                                                                iter2.hasNext() ? iter2.next() : -1))\n",
+    "                      .takeWhile(l -> l.get(0) != -1 && l.get(1) != -1);\n",
+    "    }\n",
+    "    \n",
+    "    public static void main(String[] args) {\n",
+    "        zip(Stream.of(1, 2, 3), Stream.of(100, 200, 300, 400)).forEach(System.out::println);\n",
+    "    }\n",
+    "}\n",
+    "ZipDemo.main(null);"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "bac08adf",
+   "metadata": {},
+   "source": [
+    "### Infinite Repeated Value"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "c6d3304b",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "100\n",
+      "100\n",
+      "100\n",
+      "100\n",
+      "100\n",
+      "100\n",
+      "100\n",
+      "100\n",
+      "100\n",
+      "100\n",
+      "100\n",
+      "100\n",
+      "100\n",
+      "100\n",
+      "100\n"
+     ]
+    }
+   ],
+   "source": [
+    "import java.util.stream.Stream;\n",
+    "\n",
+    "class RepeatedDemo {\n",
+    "    \n",
+    "    public static void main(String[] args) {\n",
+    "        Stream<Integer> s = Stream.generate(() -> 100);\n",
+    "        \n",
+    "        s.limit(15).forEach(System.out::println);\n",
+    "    }\n",
+    "}\n",
+    "RepeatedDemo.main(null);"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b550a54f",
+   "metadata": {},
+   "source": [
+    "### Nulls\n",
+    "\n",
+    "Unlike `List.of` and similar, `Stream.of` is fine with `null` elements, as long as you don't pass a single one that is ambiguous with passing a null array for the variadic arg."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "id": "372e8eb5",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n",
+      "null\n",
+      "Still alive!\n"
+     ]
+    },
+    {
+     "ename": "EvalException",
+     "evalue": "Cannot read the array length because \"array\" is null",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1m\u001b[31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1m\u001b[31mjava.lang.NullPointerException: Cannot read the array length because \"array\" is null\u001b[0m",
+      "\u001b[1m\u001b[31m\tat java.base/java.util.Arrays.stream(Arrays.java:5428)\u001b[0m",
+      "\u001b[1m\u001b[31m\tat java.base/java.util.stream.Stream.of(Stream.java:1426)\u001b[0m",
+      "\u001b[1m\u001b[31m\tat RepeatedDemo.main(#21:1)\u001b[0m",
+      "\u001b[1m\u001b[31m\tat .(#27:1)\u001b[0m"
+     ]
+    }
+   ],
+   "source": [
+    "import java.util.stream.Stream;\n",
+    "\n",
+    "class RepeatedDemo {\n",
+    "    \n",
+    "    public static void main(String[] args) {\n",
+    "        // OK\n",
+    "        Stream<Integer> s = Stream.of(1, null);\n",
+    "        s.forEach(System.out::println);\n",
+    "        \n",
+    "        System.out.println(\"Still alive!\");\n",
+    "        \n",
+    "        // BAD (interpretted as null array)\n",
+    "        Stream<Integer> t = Stream.of(null);\n",
+    "    }\n",
+    "}\n",
+    "RepeatedDemo.main(null);"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "43bb64a5",
+   "metadata": {},
+   "source": [
+    "### Chess Queen Iteration Pattern\n",
+    "\n",
+    "I'm not sure if this is the best way, but it's at least cleaner to me than doing 8 for loops."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "id": "6cd103f0",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "25\n"
+     ]
+    }
+   ],
+   "source": [
+    "import java.util.stream.Stream;\n",
+    "\n",
+    "class QueenDemo {\n",
+    "    private static class Square {\n",
+    "        public int row;\n",
+    "        public int col;\n",
+    "        \n",
+    "        public Square(int row, int col) {\n",
+    "            this.row = row;\n",
+    "            this.col = col;\n",
+    "        }\n",
+    "    }\n",
+    "    \n",
+    "    private static Stream<Square> zip(Stream<Integer> left, Stream<Integer> right) {\n",
+    "        var iter1 = left.iterator();\n",
+    "        var iter2 = right.iterator();\n",
+    "        \n",
+    "        return Stream.generate(() -> new Square(iter1.hasNext() ? iter1.next() : -1, \n",
+    "                                                                iter2.hasNext() ? iter2.next() : -1))\n",
+    "                      .takeWhile(l -> l.row != -1 && l.col != -1);\n",
+    "    }\n",
+    "    \n",
+    "    private static Stream<Integer> upward(int start) {\n",
+    "        return Stream.iterate(start + 1, n -> n + 1);\n",
+    "    }\n",
+    "    \n",
+    "    private static Stream<Integer> downward(int start) {\n",
+    "        return Stream.iterate(start - 1, n -> n - 1);\n",
+    "    }\n",
+    "    \n",
+    "    private static Stream<Integer> repeating(int val) {\n",
+    "        return Stream.generate(() -> val);\n",
+    "    }\n",
+    "    \n",
+    "    private static boolean checkSquare(Square square) {\n",
+    "        // Could do other checks here like whether a piece is blocking the view for attack\n",
+    "        return square.row >= 1 && square.col >= 1 && square.row <= 8 && square.col <= 8;\n",
+    "    }\n",
+    "    \n",
+    "    private static int countAttacks(Stream<Square> squares) {\n",
+    "        return (int) squares.takeWhile(QueenDemo::checkSquare).count();\n",
+    "    }\n",
+    "    \n",
+    "    public static void main(String[] args) {\n",
+    "        Square queen = new Square(3, 4);\n",
+    "        \n",
+    "        int count = countAttacks(zip(upward(queen.row), repeating(queen.col))) +\n",
+    "                    countAttacks(zip(downward(queen.row), repeating(queen.col))) +\n",
+    "                    countAttacks(zip(repeating(queen.row), upward(queen.col))) + \n",
+    "                    countAttacks(zip(repeating(queen.row), downward(queen.col))) +\n",
+    "                    countAttacks(zip(downward(queen.row), downward(queen.col))) + \n",
+    "                    countAttacks(zip(upward(queen.row), upward(queen.col))) +\n",
+    "                    countAttacks(zip(downward(queen.row), upward(queen.col))) + \n",
+    "                    countAttacks(zip(upward(queen.row), downward(queen.col)));\n",
+    "                    \n",
+    "        System.out.println(count);\n",
+    "    }\n",
+    "}\n",
+    "QueenDemo.main(null);"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "4276ffcb",
    "metadata": {},
    "source": [
@@ -1517,17 +1850,58 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "94d4b82b",
+   "cell_type": "markdown",
+   "id": "b95e2038",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "# IIFE (Immediately Invoked Function Expressions)\n",
+    "\n",
+    "Unlike in other languages, you can't directly call a lambda inline after creation, but there is an equivalent in Java.\n",
+    "\n",
+    "You can __cast to a functional interface inline__ and then immediately call members.\n",
+    "\n",
+    "This example shows:\n",
+    "- calling a `Runnable` right away\n",
+    "- using `Predicate` methods like `and` right away"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "id": "7212acad",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Hi!\n",
+      "\n",
+      "true\n",
+      "false\n"
+     ]
+    }
+   ],
+   "source": [
+    "import java.util.function.Predicate;\n",
+    "\n",
+    "class IIFEDemo {\n",
+    "    public static void main(String[] args) {\n",
+    "        ((Runnable) () -> System.out.println(\"Hi!\")).run();\n",
+    "        System.out.println();\n",
+    "        \n",
+    "        Predicate<Integer> p = ((Predicate<Integer>) x -> x > 0).and(x -> x % 2 == 0);\n",
+    "        System.out.println(p.test(10));\n",
+    "        System.out.println(p.test(9));\n",
+    "    }\n",
+    "}\n",
+    "IIFEDemo.main(null);"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "676829d4",
+   "id": "034fdc71",
    "metadata": {},
    "outputs": [],
    "source": []
