--- a/java/Strings and Printing.ipynb
+++ b/java/Strings and Printing.ipynb
@@ -1414,9 +1414,20 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "91ec2db4",
+   "metadata": {},
+   "source": [
+    "# Case Insensitivity\n",
+    "\n",
+    "- `String.compareToIgnoreCase`\n",
+    "- `String.CASE_INSENSITIVE_ORDER` (a `Comparator`)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "bc5e7581",
+   "id": "f3f080fc",
    "metadata": {},
    "outputs": [],
    "source": []
