Adding info about:
multidimensional arrays
map as entries
deep copying

--- a/java/Collections.ipynb
+++ b/java/Collections.ipynb
@@ -2504,9 +2504,209 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "2eeb381f",
+   "metadata": {},
+   "source": [
+    "# Multidimensional\n",
+    "\n",
+    "Multidimensional arrays:\n",
+    "- actually an array of references to other arrays\n",
+    "  - `length` is length of 1 level only\n",
+    "- if specifying a length, you can provide all or just the first one\n",
+    "  - default values are null for elements\n",
+    "- `Arrays.toString()`, `Arrays.hashCode()`, and `Arrays.equals()` treat array members as pointers instead of expanding\n",
+    "  - this makes them safe to use if cyclical references may exist\n",
+    "- `ARrays.deepToString()`, `Arrays.deepHashCode()`, and `Arrays.deepEquals()` treat array members recursively as you'd expect\n",
+    "\n",
+    "Multidimensional lists:\n",
+    "- just a list of lists\n",
+    "- `toString()` and `hashCode` just work because calls those methods on members and so on"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "730e2461",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Arrays\n",
+      "null\n",
+      "[null, null, null, null, null, null, null, null, null, null]\n",
+      "[[I@58dd0c96, [I@561ae9fd, [I@522567e6, [I@1727e3c6, [I@27aee408, [I@267ab401, [I@5f19ed7f, [I@77081c89, [I@27d628c4, [I@547f5a83]\n",
+      "[[0, 0, 0, 0, 0, 0, 0, 0, 0, 0], [0, 0, 0, 0, 0, 0, 0, 0, 0, 0], [0, 0, 0, 0, 0, 0, 0, 0, 0, 0], [0, 0, 0, 0, 0, 0, 0, 0, 0, 0], [0, 0, 0, 0, 0, 0, 0, 0, 0, 0], [0, 0, 0, 0, 0, 0, 0, 0, 0, 0], [0, 0, 0, 0, 0, 0, 0, 0, 0, 0], [0, 0, 0, 0, 0, 0, 0, 0, 0, 0], [0, 0, 0, 0, 0, 0, 0, 0, 0, 0], [0, 0, 0, 0, 0, 0, 0, 0, 0, 0]]\n",
+      "10\n",
+      "\n",
+      "[[10]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "import java.util.Arrays;\n",
+    "import java.util.List;\n",
+    "import java.util.ArrayList;\n",
+    "\n",
+    "class MultiDemo {\n",
+    "    public static void main(String[] args) {\n",
+    "        int[][] a = null;\n",
+    "        int[][] b = new int[10][];\n",
+    "        // int[][] b = new int[][10]; // ILLEGAL\n",
+    "        int[][] c = new int[10][10];\n",
+    "        \n",
+    "        System.out.println(\"Arrays\");\n",
+    "        System.out.println(Arrays.toString(a));\n",
+    "        System.out.println(Arrays.toString(b));\n",
+    "        System.out.println(Arrays.toString(c));\n",
+    "        System.out.println(Arrays.deepToString(c));\n",
+    "        // also deepHashCode() and deepEquals()\n",
+    "        System.out.println(c.length);\n",
+    "        System.out.println();\n",
+    "        \n",
+    "        List<List<Integer>> l = new ArrayList<>();\n",
+    "        l.add(new ArrayList<>());\n",
+    "        l.get(0).add(10);\n",
+    "        System.out.println(l);\n",
+    "    }\n",
+    "}\n",
+    "MultiDemo.main(null);"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "75e3da0f",
+   "metadata": {},
+   "source": [
+    "# Deep Copies\n",
+    "\n",
+    "In general, methods to clone 1 level (such as `arr.clone()` and `new ArrayList<>(otherList)`) do not make deep copies.\n",
+    "\n",
+    "There are 2 approaches demonstrated here:\n",
+    "1. Traditional manual loop\n",
+    "1. Streams"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "id": "9f4dbb79",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[1, 2, 3], [4, 5, 6]]\n",
+      "[[1, 2, 3], [4, 5, 6]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "import java.util.Arrays;\n",
+    "import java.util.List;\n",
+    "import java.util.ArrayList;\n",
+    "import java.util.stream.Collectors;\n",
+    "\n",
+    "class DeepDemo {\n",
+    "    public static void main(String[] args) {\n",
+    "        // Arrays\n",
+    "        int[][] arr = {{1, 2, 3}, {4, 5, 6}};\n",
+    "        int[][] arr2 = new int[arr.length][];\n",
+    "        for (int i = 0; i < arr.length; i++) {\n",
+    "            arr2[i] = arr[i].clone();\n",
+    "        }\n",
+    "        arr[0][0] = 100;\n",
+    "        System.out.println(Arrays.deepToString(arr2));\n",
+    "        \n",
+    "        // Lists\n",
+    "        List<List<Integer>> l = List.of(List.of(1, 2, 3), List.of(4, 5, 6));\n",
+    "        List<List<Integer>> l2 = l.stream().map(lIn -> new ArrayList<>(lIn)).collect(Collectors.toList());\n",
+    "        l2.get(0).set(0, 100);\n",
+    "        System.out.println(l);\n",
+    "    }\n",
+    "}\n",
+    "DeepDemo.main(null);"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f18ba7db",
+   "metadata": {},
+   "source": [
+    "# Map as Set of Entries\n",
+    "\n",
+    "- In addition to using `keySet` and `values` to access keys and values, you can access pairs of key and value as `java.util.Map.Entry<TKey, TValue>`.\n",
+    "- You can obtain a set of entries with `map.entryet()`\n",
+    "  - these entries are __mutable__ and __affect the map itself__\n",
+    "- Although a map can't be directly streamed, you can stream the entry set.\n",
+    "- You can create a new entry via the concrete implementations in `java.util.AbstractMap`\n",
+    "    - both take an entry or a key and value as parameters\n",
+    "    - `SimpleEntry` is the normal case\n",
+    "    - `SimpleImmutableEntry` is for implementing thread-safe maps\n",
+    "- To turn a stream into a map, you can use the `Collectors.toMap` collector, which needs key and value method references even in the simplest case"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "id": "87e40b7e",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n",
+      "100\n",
+      "\n",
+      "2\n",
+      "100\n",
+      "\n",
+      "{1=1000, 2=1000}\n",
+      "{1=1000, 2=1000}\n"
+     ]
+    }
+   ],
+   "source": [
+    "import java.util.Map;\n",
+    "import java.util.HashMap;\n",
+    "import java.util.AbstractMap.SimpleEntry;\n",
+    "import java.util.stream.Collectors;\n",
+    "\n",
+    "class MapEntryDemo {\n",
+    "    public static void main(String[] args) {\n",
+    "        Map<Integer, Integer> m = new HashMap<>();\n",
+    "        m.put(1, 100);\n",
+    "        m.put(2, 100);\n",
+    "        \n",
+    "        for (Map.Entry<Integer, Integer> entry : m.entrySet()) {\n",
+    "            System.out.println(entry.getKey());\n",
+    "            System.out.println(entry.getValue());\n",
+    "            System.out.println();\n",
+    "            \n",
+    "            entry.setValue(entry.getValue() * 10);\n",
+    "        }\n",
+    "        System.out.println(m);\n",
+    "        \n",
+    "        // var s = m.stream(); // Map can't be directly streamed!\n",
+    "        \n",
+    "        var n = m.entrySet().stream().map(entry -> \n",
+    "            new SimpleEntry<>(entry)).collect(Collectors.toMap(\n",
+    "                Map.Entry<Integer, Integer>::getKey, Map.Entry<Integer, Integer>::getValue));\n",
+    "        m.put(1, 0);\n",
+    "        System.out.println(n);\n",
+    "    }\n",
+    "}\n",
+    "MapEntryDemo.main(null);"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c61ee822",
+   "id": "9038ea20",
    "metadata": {},
    "outputs": [],
    "source": []
