Adding clarification about execution order.

--- a/SQL/Advanced Queries.ipynb
+++ b/SQL/Advanced Queries.ipynb
@@ -2,10 +2,18 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "15e15f07",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\u001b[33mThere's a new jupysql version available (0.10.1), you're running 0.10.0. To upgrade: pip install jupysql --upgrade\u001b[0m\n"
+     ]
+    }
+   ],
    "source": [
     "%load_ext sql\n",
     "%sql duckdb://"
@@ -506,6 +514,145 @@
     "SELECT department, salary, COUNT(*)\n",
     "FROM employees\n",
     "GROUP BY department, salary;"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a13b2b12",
+   "metadata": {},
+   "source": [
+    "# Alias in Group By\n",
+    "\n",
+    "Column aliases do work in GROUP BY (but you can also use the original names)."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "f16cc9da",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<span style=\"None\">Running query in &#x27;duckdb://&#x27;</span>"
+      ],
+      "text/plain": [
+       "Running query in 'duckdb://'"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "<table>\n",
+       "    <thead>\n",
+       "        <tr>\n",
+       "            <th>Count</th>\n",
+       "        </tr>\n",
+       "    </thead>\n",
+       "    <tbody>\n",
+       "    </tbody>\n",
+       "</table>"
+      ],
+      "text/plain": [
+       "+-------+\n",
+       "| Count |\n",
+       "+-------+\n",
+       "+-------+"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "%%sql\n",
+    "\n",
+    "CREATE OR REPLACE TABLE employees (\n",
+    "    id INT PRIMARY KEY,\n",
+    "    name VARCHAR(50),\n",
+    "    department VARCHAR(50),\n",
+    "    salary DECIMAL(10, 2)\n",
+    ");\n",
+    "\n",
+    "INSERT INTO employees (id, name, department, salary)\n",
+    "VALUES\n",
+    "    (1, 'John Doe', 'IT', 5000),\n",
+    "    (2, 'Jane Smith', 'HR', 6000),\n",
+    "    (3, 'Mike Johnson', 'IT', 5500),\n",
+    "    (4, 'Emily Brown', 'Finance', 7000),\n",
+    "    (5, 'David Lee', 'IT', 4500);"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "91c9a8fd",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<span style=\"None\">Running query in &#x27;duckdb://&#x27;</span>"
+      ],
+      "text/plain": [
+       "Running query in 'duckdb://'"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "<table>\n",
+       "    <thead>\n",
+       "        <tr>\n",
+       "            <th>dpt</th>\n",
+       "            <th>total_salary</th>\n",
+       "        </tr>\n",
+       "    </thead>\n",
+       "    <tbody>\n",
+       "        <tr>\n",
+       "            <td>IT</td>\n",
+       "            <td>15000.00</td>\n",
+       "        </tr>\n",
+       "        <tr>\n",
+       "            <td>HR</td>\n",
+       "            <td>6000.00</td>\n",
+       "        </tr>\n",
+       "        <tr>\n",
+       "            <td>Finance</td>\n",
+       "            <td>7000.00</td>\n",
+       "        </tr>\n",
+       "    </tbody>\n",
+       "</table>"
+      ],
+      "text/plain": [
+       "+---------+--------------+\n",
+       "|   dpt   | total_salary |\n",
+       "+---------+--------------+\n",
+       "|    IT   |   15000.00   |\n",
+       "|    HR   |   6000.00    |\n",
+       "| Finance |   7000.00    |\n",
+       "+---------+--------------+"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "%%sql\n",
+    "\n",
+    "SELECT department AS dpt, SUM(salary) AS total_salary\n",
+    "FROM employees\n",
+    "GROUP BY dpt, department;"
    ]
   },
   {
@@ -2027,7 +2174,9 @@
    "source": [
     "# Execution Order of SELECT statement\n",
     "\n",
-    "[FROM] [JOIN] [WHERE] [GROUP BY] [HAVING] [SELECT] [DISTINCT] [ORDER BY] [LIMIT/OFFSET]"
+    "[FROM] [JOIN] [WHERE] [GROUP BY] [HAVING] [SELECT] [DISTINCT] [ORDER BY] [LIMIT/OFFSET]\n",
+    "\n",
+    "Note: this isn't 100% true because GROUP BY can take the column aliases from SELECT into account."
    ]
   },
   {
