--- a/java/Functional Programming.ipynb
+++ b/java/Functional Programming.ipynb
@@ -1800,7 +1800,10 @@
     "        - `negate()` to negate the predicate\n",
     "    - static methods:\n",
     "        - `isEqual(obj)` to get predicate that tests if passed object equals this object with `Object.equals`\n",
-    "        \n",
+    "- `BiPredicate<T1, T2>`\n",
+    "    - `boolean test(T1 t1, T2 t2)`\n",
+    "    - similar methods to `Predicate` but on 2 args\n",
+    "\n",
     "- `Consumer<T>`\n",
     "    - `void accept(T val)`\n",
     "    - default methods:\n",
